--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "pako": "^1.0.6",
     "redis": "^2.4.2",
     "request": "^2.72.0",
-    "ws": "^3.2.0"
+    "ws": "^3.2.0",
+    "fs": "^0.0.1-security"
   },
   "execMap": {
     "js": "node –harmony"
