--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bluebird": "^3.3.1",
     "config": "^1.28.1",
     "crypto-js": "^3.1.9-1",
+    "fs": "^0.0.1-security",
     "moment": "^2.13.0",
+    "mysql": "^2.15.0",
     "pako": "^1.0.6",
     "redis": "^2.4.2",
     "request": "^2.72.0",
     "ws": "^3.2.0",
-    "fs": "^0.0.1-security"
+    "mysql": "^2.15.0"
   },
   "execMap": {
     "js": "node –harmony"
